--- a/Uebung4/sz.html
+++ b/Uebung4/sz.html
@@ -1,83 +1,43 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>WebTech20</title>
+    <title>Webtech2020</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <title>Teilnehmer_innen von S-Z</title>
 </head>
 <body>
 <header>
-    <h1 style="color: #FF5F00; background-color: #AFAFAF;">Teilnehmer_innen WebTech</h1>
-    <img src="../images/fiw.jpg" style="width:53px; height:48px;" alt="FIW Logo"/>
-
+    <h1>Teilnehmer_innen WebTech</h1>
+    <img src="../images/fiw.jpg" style="width:53px; height:48px;"/>
     <style>
-        body{
-            font-family: Arial,serif;
-        }
-
-
-        a{
-            color: #FF5F00;
-            font-size: larger;
-            font-family: Arial,serif;
-        }
-
-        a:hover {   /* mouse over */
-            color:#0082D1;
-        }
-
-        nav{
-            background: lightgray;
-            padding-top: 5px;
-            padding-bottom: 5px;
-            margin-bottom: 20px;
-        }
-
-        tr:hover{
-            background-color:#76B900;
-        }
-
-
-        footer{
-            color: white;
-            font-size: 17px;
-            padding: 30px 140px;
-            background: grey;
-            margin-bottom: 60px;
-            height:20px;
+        header
+        {
+            background-color: #AFAFAF;
             text-align: center;
-            padding-bottom: 40px;
-            padding-top: 10px
         }
-
-        h1{
-            padding-top: 40px;
-            padding-bottom: 40px;
-        }
-
-
-        div{
-            text-align: center;
-            font-size: smaller;
-        }
-
-        img{
-            display: flex;
-            justify-content: left;
-        }
-
-        #img {
-            position: absolute;
-            top: 10px;
-            left: 4px;
-            margin: 90px;
-            padding: 3px;
-            margin-left: 30px;
-        }
-
-        .rechts, .links {
+        .nav-link {
             background-color: lightgrey;
+            color:orange;
+            font-size: large;
+        }
+        .nav-link:hover {
+            color: #0082D1;
+        }
+        .table-hover tbody tr:hover td, .table-hover tbody tr:hover th {
+            background-color: #76B900;
+        }
+        h1{
+            display: inline;
+            padding-left: 25%;
+        }
+        footer{
+            background-color: lightgrey;
+            font-size: small;
+        }
+        /* Mobile als Standard */
+        .rechts, .links {
+            background-color: #FF5F00;
             height: 100px;
         }
 
@@ -87,74 +47,78 @@
                 height: auto;
             }
         }
-
     </style>
 </header>
-
-
 <section>
     <h3>Alle Teilnehmer_innen von S-Z</h3>
-    <div class="links col-12 col-lg-2">
-        <h2>links</h2>
-    </div>
-    <div class="table-responsive col-12 col-lg-8">
-        <div class="table table-striped table-hover">
-            <tr>
-                <th>Vorname</th>
-                <th>Nachname</th>
-                <th>E-Mail-Adresse</th>
-                <th>IP-Adresse</th>
-            </tr>
-            <tbody>
-
-            <tr>
-            <tr>
-                <td>Alan</td>
-                <td>Vasquez</td>
-                <td>avasquezo@miibeian.gov.cn</td>
-                <td>178.109.86.172</td>
-            </tr>
-            <tr>
-                <td>Mildred</td>
-                <td>Watkins</td>
-                <td>mwatkins0@miibeian.gov.cn</td>
-                <td>150.67.132.64</td>
-            </tr>
-            <tr>
-                <td>Eugene</td>
-                <td>Williams</td>
-                <td>ewilliamsi@deliciousdays.com</td>
-                <td>67.208.26.182</td>
-            </tr>
-            <tr>
-                <td>Catherine</td>
-                <td>Williams</td>
-                <td>cwilliamsl@360.cn</td>
-                <td>154.87.204.51</td>
-            </tr>
-            <tr id = "e1">
-                <td> <input id="i1" type="text" class="form-control" placeholder="Vorname"  /></td>
-                <td> <input id="i2" type="text" class="form-control" placeholder="Nachname" /></td>
-                <td> <input id="i3" type="text" class="form-control" placeholder="Email-Adresse" /></td>
-
-                <td>
-                    <input id="i4" type="text" class="form-control" placeholder="IP-Adresse" />
-                </td>
-
-                <td>
-                    <button type="button" class="btn btn-dark" onclick="checkAndAdd()">Add</button>
-                </td>
-
-            </tr>
+    <table>
+        <thead>
+        <div class="links col-12 col-lg-2">
+            <h2>links</h2>
         </div>
-    </div>
+        <div class="table-responsive col-12 col-lg-8">
+            <table class="table table-striped table-hover">
+                <tr>
+                    <th>Vorname</th>
+                    <th>Nachname</th>
+                    <th>E-Mail-Adresse</th>
+                    <th>IP-Adresse</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                <tr>
+                    <td>Alan</td>
+                    <td>Vasquez</td>
+                    <td>avasquezo@miibeian.gov.cn</td>
+                    <td>178.109.86.172</td>
+                </tr>
+                <tr>
+                    <td>Mildred</td>
+                    <td>Watkins</td>
+                    <td>mwatkins0@miibeian.gov.cn</td>
+                    <td>150.67.132.64</td>
+                </tr>
+                <tr>
+                    <td>Eugene</td>
+                    <td>Williams</td>
+                    <td>ewilliamsi@deliciousdays.com</td>
+                    <td>67.208.26.182</td>
+                </tr>
+                <tr>
+                    <td>Catherine</td>
+                    <td>Williams</td>
+                    <td>cwilliamsl@360.cn</td>
+                    <td>154.87.204.51</td>
+                </tr>
+                <tr id = "e1">
+                    <td> <input id="i1" type="text" class="form-control" placeholder="Vorname"  /></td>
+                    <td> <input id="i2" type="text" class="form-control" placeholder="Nachname" /></td>
+                    <td> <input id="i3" type="text" class="form-control" placeholder="Email-Adresse" /></td>
+
+                    <td>
+
+                        <input id="i4" type="text" class="form-control" placeholder="IP-Adresse" />
+                    </td>
+
+
+
+
+                    <td>
+                        <button type="button" class="btn btn-dark" onclick="checkAndAdd()">Add</button>
+                    </td>
+
+                </tr>
+            </table>
+        </div>
+        </tbody>
     </table>
     <div class="rechts col-12 col-lg-2">
         <h2>rechts</h2>
     </div>
 </section>
 <footer>
-    <p>Yara Jaafar -- Aufgabe 4</p>
+    <p>Yara Jaafar -- Aufgabe 2</p>
 </footer>
 <script>
     let input1 =  document.getElementById('i1');
@@ -256,3 +220,4 @@
 </script>
 </body>
 </html>
+
